--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -115,8 +115,8 @@
 
                 <img src="/NewFolder2/new/brigitte-tohm-XyGeWTj2E7w-unsplash.jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Interested in articles on Relationship and Marriage?</h4>
-                    <p><a href="~/?category=relationship_and_marriage#blog">See here</a></p>
+                    <h4>Check out our articles on Relationship and Marriage</h4>
+                    @* <p><a href="~/?category=relationship_and_marriage#blog">See here</a></p> *@
                 </div>
             </div>
 
@@ -126,8 +126,8 @@
             <div class="card2">
                 <img src="/NewFolder2/new/kakudmi-JO19K0HDDXI-unsplash (1).jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Need latest news on sports?</h4>
-                    <p><a href="~/?category=sports#blog">See here</a></p>
+                    <h4>Get entertained with news on Football</h4>
+                    @* <p><a href="~/?category=sports#blog">See here</a></p> *@
                 </div>
             </div>
 
@@ -139,8 +139,8 @@
 
                 <img src="/NewFolder2/new/jacalyn-beales-geRpPjIiu8U-unsplash.jpg" alt="Avatar ">
                 <div class="container2">
-                    <h4>Do you want to read about having a fulfilling career?</h4>
-                    <p><a href="~/?category=career#blog">See here</a></p>
+                    <h4>Our Career section provides you interesting contents on career</h4>
+                    @* <p><a href="~/?category=career#blog">See here</a></p> *@
                 </div>
             </div>
 
@@ -152,8 +152,8 @@
             <div class="card2">
                 <img src="/NewFolder2/new/lucia-48UaeIMNAA4-unsplash (2).jpg" alt="Avatar">
                 <div class="container2">
-                    <h4>Are you interested in politics?</h4>
-                    <p><a href="~/?category=politics#blog">See here</a></p>
+                    <h4>A lover of politics? We have related articles for you.</h4>
+                    @* <p><a href="~/?category=politics#blog">See here</a></p> *@
                 </div>
             </div>
 
@@ -215,7 +215,7 @@
                                             <li class="all active"><a href="~/?category=all#blog">All</a></li>
                                             <li class="first"><a href="~/?category=relationship_and_marriage#blog">Relationship & Marriage</a></li>
                                             <li class="second"><a href="~/?category=politics#blog">Politics</a></li>
-                                            <li class="third"><a href="~/?category=sports#blog">Sports</a></li>
+                                            <li class="third"><a href="~/?category=sports#blog">Sports corner</a></li>
                                             <li class="fourth"><a href="~/?category=career#blog">Career</a></li>
                                             <li class="fifth"><a href="~/?category=general#blog">General</a></li>
                                         </ul>
@@ -340,6 +340,262 @@
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                              width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                         <polyline fill="#bebebe" points="0,5.61 5.609,0 7,0 7,1.438 2.438,6 7,10.563 7,12 5.609,12 -0.002,6.39 " />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -861,6 +1117,262 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                 </div>
@@ -964,51 +1476,51 @@
 
 
                         @*@foreach (var item in Books_Slide2)
-            {
-                <div class="item carousel-item">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="thumb-wrapper">
-                                <div class="img-box">
-                                    <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
+                            {
+                                <div class="item carousel-item">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="thumb-wrapper">
+                                                <div class="img-box">
+                                                    <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
+                                                </div>
+                                                <div class="thumb-content">
+                                                    <h5 style="color:black">@item.Title</h5>
+                                                    @if (item.IsHardBook == true)
+                                                    {
+                                                        <p class="item-price">@item.Price</p>
+                                                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                                                    }
+                                                    <a href="#" class="btn btn-primary">Download</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="thumb-content">
-                                    <h5 style="color:black">@item.Title</h5>
-                                    @if (item.IsHardBook == true)
-                                    {
-                                        <p class="item-price">@item.Price</p>
-                                        <a href="#" class="btn btn-primary">Add to Cart</a>
-                                    }
-                                    <a href="#" class="btn btn-primary">Download</a>
+                            }
+                            @foreach (var item in Books_Slide3)
+                            {
+                                <div class="item carousel-item">
+                                    <div class="row">
+                                        <div class="col-sm-4">
+                                            <div class="thumb-wrapper">
+                                                <div class="img-box">
+                                                    <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
+                                                </div>
+                                                <div class="thumb-content">
+                                                    <h5 style="color:black">@item.Title</h5>
+                                                    @if (item.IsHardBook == true)
+                                                    {
+                                                        <p class="item-price">@item.Price</p>
+                                                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                                                    }
+                                                    <a href="#" class="btn btn-primary">Download</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-            @foreach (var item in Books_Slide3)
-            {
-                <div class="item carousel-item">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <div class="thumb-wrapper">
-                                <div class="img-box">
-                                    <img src="~/Uploads/@Html.DisplayFor(modelItem => item.ImageUrl)" class="img-responsive img-fluid" alt="">
-                                </div>
-                                <div class="thumb-content">
-                                    <h5 style="color:black">@item.Title</h5>
-                                    @if (item.IsHardBook == true)
-                                    {
-                                        <p class="item-price">@item.Price</p>
-                                        <a href="#" class="btn btn-primary">Add to Cart</a>
-                                    }
-                                    <a href="#" class="btn btn-primary">Download</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }*@
+                            }*@
                     </div>
 
                     @{
