--- a/SelahSeries/Views/BookMgt/Index.cshtml
+++ b/SelahSeries/Views/BookMgt/Index.cshtml
@@ -1,44 +1,51 @@
-﻿@model IEnumerable<SelahSeries.Models.Book>
+﻿@model IEnumerable<SelahSeries.Models.Post>
 
 @{
     ViewData["Title"] = "Index";
     ViewData["Add Navigation"] = "false";
+    var pageIndex = Convert.ToInt32(ViewData["PageIndex"]);
+    var previous = pageIndex - 1;
+    var next = pageIndex + 1;
 }
 @section AddToEnd {
     <script src="~/NewFolder2/js/blogmgt.js"></script>
 }
 <div style="color: #ffcc00; background-color:black;" class="jumbotron text-center">
-    <h1>Book Management Page <br /> (List of Books)</h1>
-    <p> Add, Delete, and Edit Books Here...</p>
+    <h1>Blog Content Management Page <br /> (List of Posts)</h1>
+    <p> Add, Delete, Edit, Archive Blog Posts Here...</p>
 </div>
 
 @await Html.PartialAsync("AlertViewPartial")
 <p>
-    <a class="btn btn-primary btn-lg" asp-action="Create">Add New Book</a>
+    <a class="btn btn-primary btn-lg" asp-action="Create">Create New Blog Post</a>
 </p>
 <table style="width:100%; text-align:center;" class="table table-striped table-responsive">
     <thead>
         <tr>
             <th></th>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Author)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Author)
+                @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
 
                 @Html.DisplayNameFor(model => model.CategoryId)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ImageUrl)
+                @Html.DisplayNameFor(model => model.TitleImageUrl)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IsHardBook)
+                @Html.DisplayNameFor(model => model.Published)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayNameFor(model => model.CreatedAt)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ModifiedAt)
+            </th>
+
         </tr>
     </thead>
     <tbody>
@@ -47,15 +54,16 @@
             <tr>
                 <td>
                     <div class="btn-group">
-                        <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.BookId">Edit</a>
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.BookId">Delete</a>
+                        <a class="btn btn-info" asp-action="Edit" asp-route-id="@item.PostId">Edit</a>
+
+                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.PostId">Delete</a>
                     </div>
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Title)
+                    @Html.DisplayFor(modelItem => item.Author)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Author)
+                    @Html.DisplayFor(modelItem => item.Title)
                 </td>
                 @if (item.CategoryId == 1)
                 {
@@ -84,21 +92,52 @@
                     <td>Unknown</td>
                 }
                 <td>
-                    @Html.DisplayFor(modelItem => item.ImageUrl)
+                    @Html.DisplayFor(modelItem => item.TitleImageUrl)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.IsHardBook)
+                    @Html.DisplayFor(modelItem => item.Published)
                 </td>
                 <td>
-                    ₦ @Html.DisplayFor(modelItem => item.Price)
+                    @Html.DisplayFor(modelItem => item.CreatedAt)
                 </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ModifiedAt)
+                </td>
+
+
             </tr>
         }
     </tbody>
 </table>
 
+<div style="margin-top:80px; margin-bottom:80px">
+    <nav>
+        <ul id="navDiv0" class="pagination pg-red pagination-lg justify-content-center">
+            <li class="page-item">
+                <a href="~/@previous#blog" class="page-link waves-effect waves-effect" aria-label="Previous">
+                    <span aria-hidden="true">«</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            @* @{
+                    var numberOfPages = (int)Math.Ceiling((Decimal)Model.Count() / Model. );
+                    foreach (var item in Enumerable.Range(1, numberOfPages))
+                    {
+                        <li class="page-item btnn0 active "><a href="~/@item?category=@category#blog" class="page-link waves-effect waves-effect">@item</a></li>
+                    }
+                } *@
+
+            <li class="page-item btnn0">
+                <a href="~/@next#blog" class="page-link waves-effect waves-effect" aria-label="Next">
+                    <span aria-hidden="true">»</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
+
 <div style="color: #ffcc00; background-color:black; margin-bottom:0;" class=" text-center">
     <h1>Selah Series</h1>
     <p> &copy; 2020</p>
 </div>
-
