--- a/SelahSeries/Views/Home/About.cshtml
+++ b/SelahSeries/Views/Home/About.cshtml
@@ -38,7 +38,7 @@
                 relationships and marriages. In addition, SELAH Series discusses faith, social, political,
                 economic/entrepreneur, healthcare and sport matters.
             </p>
-           
+
             <p class="mb-5" style="color:black; text-align:center; line-height:1.70">
                 We see ourselves as “privileged clay in the hands of the Potter” and, thus, our sole aim is for
                 God’s name to be glorified in the lives of everyone we shall come across. We welcome you in
@@ -123,72 +123,72 @@
         </div>
     </div>
 </div>
-    <div class="authors same second" style="padding-top:41px; margin-top:80px">
-        <div class="container bio">
-            <div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="card" style="border-radius:0px">
-                            <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <p class="h5 card-text">Titilayo: a World of Vision Embedded in Tranquillity</p>
-                                <p class="h6">
-                                    Titilayo is a wife, mother, scientist, researcher, medical writer, editor, coach, Public
-                                    Health analyst and a child of God.
-                                </p>
-                            </div>
+<div class="authors same second" style="padding-top:41px; margin-top:80px">
+    <div class="container bio">
+        <div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <div class="card" style="border-radius:0px">
+                        <img class="card-img-top" src="/NewFolder2/images2/img_1.jpg" alt="Card image cap">
+                        <div class="card-body">
+                            <p class="h5 card-text">Titilayo: a World of Vision Embedded in Tranquillity</p>
+                            <p class="h6">
+                                Titilayo is a wife, mother, scientist, researcher, medical writer, editor, coach, Public
+                                Health analyst and a child of God.
+                            </p>
                         </div>
                     </div>
-                    <div class="col-lg-8">
-                        <div id="myCarousel" class="carousel slide">
-                            <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
-                                My name is <b>Titilayo LEKAN-AGUNBIADE</b>. I was born into a middle level monogamous
-                                family of six in Nigeria. I had my primary school education in St. Mary Catholic Primary
-                                School, Ile-Ife and my secondary school education at Adepetu Comprehensive College, Ile-Ife
-                                from where I proceeded to Ladoke Akintola University of Technology, Ogbomosho for my
-                                undergraduate degree in Medical Laboratory Science and later to Obafemi Awolowo
-                                University, Ile-Ife for my Master’s degree in Public Health. I am a member of Academy of
-                                Clinical Science and Medical Laboratory Medicine, Irish Global Health Network, and the
-                                European Society of Contraception and Reproductive Health.
-                            </p>
-                            <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
-                                I gave my life to Christ when I was 10 year old and I had some struggles especially with my
-                                parents because I was considered to be a “religious extremist” but the fire kept burning despite
-                                all odds.
-                            </p>
-                            <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
-                                I met my husband in the year 2011 in the church (Chapel of Grace, Obafemi Awolowo
-                                Teaching Hospital, Ile-Ife) during my one year internship program as a Medical Laboratory
-                                Scientist. He was my group leader and I never thought he will eventually be my “One and
-                                Only”. He proposed to me at a stage of my life when I needed answers and direction from God
-                                concerning my marital life, so I told him not to bother himself about me because I was not
-                                ready for such commitment and he understandably went his way but God’s mercies brought us
-                                together later in our lives when I was sure he was the one. We celebrated our 7 years in marriage
-                                few months ago and to be sincere, it has been glorious as well as very challenging, to God be
-                                the glory.
-                            </p>
-                            <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
-                                I am passionate about the total wellness of women and crave to see the world filled with
-                                wholesome and impactful women who live decisively, achieving their dreams without
-                                restrictions. I believe in the power and potency of a goodly marriage. It also gives me utmost
-                                joy to lighten other people’s burden and to put smiles on their faces.
-                            </p>
-                            <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
-                                It is the passion of my husband and I to share our lives and experiences, to help others that are
-                                hoping for a glorious marriage and are ready to go extra miles to fulfil their purposes in
-                                marriage and in other aspects of life while we stay open to learn from other people’s
-                                experiences as well because we believe that life is all about sharing and learning.
+                </div>
+                <div class="col-lg-8">
+                    <div id="myCarousel" class="carousel slide">
+                        <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
+                            My name is <b>Titilayo LEKAN-AGUNBIADE</b>. I was born into a middle level monogamous
+                            family of six in Nigeria. I had my primary school education in St. Mary Catholic Primary
+                            School, Ile-Ife and my secondary school education at Adepetu Comprehensive College, Ile-Ife
+                            from where I proceeded to Ladoke Akintola University of Technology, Ogbomosho for my
+                            undergraduate degree in Medical Laboratory Science and later to Obafemi Awolowo
+                            University, Ile-Ife for my Master’s degree in Public Health. I am a member of Academy of
+                            Clinical Science and Medical Laboratory Medicine, Irish Global Health Network, and the
+                            European Society of Contraception and Reproductive Health.
+                        </p>
+                        <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
+                            I gave my life to Christ when I was 10 years old and I had some struggles especially with my
+                            parents because I was considered to be a “religious extremist” but the fire kept burning despite
+                            all odds.
+                        </p>
+                        <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
+                            I met my husband in the year 2011 in the church (Chapel of Grace, Obafemi Awolowo
+                            Teaching Hospital, Ile-Ife) during my one year internship program as a Medical Laboratory
+                            Scientist. He was my group leader and I never thought he will eventually be my “One and
+                            Only”. He proposed to me at a stage of my life when I needed answers and direction from God
+                            concerning my marital life, so I told him not to bother himself about me because I was not
+                            ready for such commitment and he understandably went his way but God’s mercies brought us
+                            together later in our lives when I was sure he was the one. We celebrated our 7 years in marriage
+                            few months ago and to be sincere, it has been glorious as well as very challenging, to God be
+                            the glory.
+                        </p>
+                        <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
+                            I am passionate about the total wellness of women and crave to see the world filled with
+                            wholesome and impactful women who live decisively, achieving their dreams without
+                            restrictions. I believe in the power and potency of a goodly marriage. It also gives me utmost
+                            joy to lighten other people’s burden and to put smiles on their faces.
+                        </p>
+                        <p class="indent" style="text-align:justify; color: black; line-height: 1.7">
+                            It is the passion of my husband and I to share our lives and experiences, to help others that are
+                            hoping for a glorious marriage and are ready to go extra miles to fulfil their purposes in
+                            marriage and in other aspects of life while we stay open to learn from other people’s
+                            experiences as well because we believe that life is all about sharing and learning.
 
-                            </p>
-
-                        </div>
-
+                        </p>
 
                     </div>
+
+
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 <div class="eurekaa" style="
     margin-bottom: 125px;
@@ -252,7 +252,6 @@
                             not there whenever I sailed the wrong way. This was the explanation I gave when she asked
                             me about my convictions. So the more she resisted my proposal, the more I hung around. We
                             spent times together though, as I visited her apartment often and although she appeared to enjoy
-                            5
                             it, but most conversations were too one sided, too often. It can be so frustrating when you are
                             talking for hours and not hearing anything from the other person.
                         </p>
@@ -318,7 +317,7 @@
         </div>
     </div>
 </div>
-    
+
 <style>
     .text-block {
         background-color: rgba(0,0,0,0.5);
@@ -327,6 +326,7 @@
         font-size: 40px;
         border-radius: 29px;
     }
+
     .centered {
         position: absolute;
         top: 50%;
@@ -342,7 +342,6 @@
         background: white;
         margin-top: 20px;
     }
-
 
     .carousel-inner {
         height: 430px;
@@ -387,10 +386,10 @@
         height: 461px;
         overflow-y: scroll;
     }
+
     div#myCarousel::after {
-        
         background: url('/NewFolder2/new/yellow-sunflower-in-clear-glass-vase-3823839 (1).jpg');
-            opacity: 0.5;
+        opacity: 0.5;
         top: 0;
         left: 0;
         bottom: 0;
@@ -398,16 +397,19 @@
         position: absolute;
         z-index: -1;
     }
-    .read_more_btn:hover{
+
+    .read_more_btn:hover {
         background: white;
         color: darkred;
         border: 1px solid darkred;
     }
-    .eureka{
+
+    .eureka {
         width: 52%;
         margin-left: 24%;
         margin-right: 24%;
     }
+
     .eurek {
         position: relative;
         margin-top: -97px;
@@ -416,6 +418,7 @@
         background-size: contain;
         margin-bottom: 50px;
     }
+
     .bio {
         width: 80%;
         margin-bottom: 83px;
@@ -423,24 +426,29 @@
         background-position: center;
         background-size: cover;
     }
+
     .authors {
         padding-bottom: 30px;
     }
+
     .eurekaa {
         border-left: 15px solid #ec517f;
         margin: 0 50px 0 50px;
         border-right: 15px solid #ec517f;
         border-top: 15px solid #ec517f;
     }
+
     .same {
         border-left: 15px solid #0071bd;
         margin: 0 50px 0 50px;
         border-right: 15px solid #0071bd;
     }
+
         .same.second {
             border-bottom: 15px solid #0071bd;
         }
+
     .indent {
-        text-indent : 2.5em;
+        text-indent: 2.5em;
     }
 </style>
