--- a/SelahSeries/wwwroot/NewFolder2/styles/responsive.css
+++ b/SelahSeries/wwwroot/NewFolder2/styles/responsive.css
@@ -561,6 +561,12 @@
 ************/
 
 @media only screen and (max-width: 479px) {
+    div.before_menu{
+        display: block;
+    }
+    div.after_menu{
+        display: none;
+    }
     div.books .carousel-inner{
         height: auto;
     }
