--- a/SelahSeries/Views/BlogMgt/Index.cshtml
+++ b/SelahSeries/Views/BlogMgt/Index.cshtml
@@ -3,6 +3,8 @@
 @{
     ViewData["Title"] = "Index";
     ViewData["Add Navigation"] = "false";
+    ViewBag.Title = "Blog mgt";
+    Layout = "~/views/admin/_AdminLayout.cshtml";
 }
 @section AddToEnd {
     <script src="~/NewFolder2/js/blogmgt.js"></script>
