--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -200,6 +200,41 @@
             <div class="col-lg-9">
                 <div class="main_content">
 
+                    <div class="blog_section" style="margin-bottom:80px">
+                        @if (Model.DontMiss.Any())
+                        {
+                            <div class="section_panel d-flex flex-row align-items-center justify-content-start">
+                                <div class="section_title">Don't Miss</div>
+
+
+                            </div>
+
+                            <div class="section_content">
+                                <div class="grid clearfix">
+
+
+                                    @foreach (var item in Model.DontMiss)
+                                    {
+
+
+                                        <!-- Small Card With Image -->
+                                        <div class="card card_default  card_small_with_image grid-item">
+                                            <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="@Html.DisplayFor(modelItem => item.Title)">
+                                            <div class="card-body">
+                                                <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                                <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                            </div>
+                                        </div>
+
+
+                                    }
+
+
+                                </div>
+                            </div>
+                        }
+
+                    </div>
 
 
                     <!-- Blog Section - Latest -->
@@ -243,70 +278,8 @@
                                 @foreach (var item in latestArticle)
                                 {
 
-            <div class="card card_default card_small_with_image grid-item">
-                <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
-                <div class="card-body">
-                    <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
-                    <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
-                </div>
-            </div>
-
-
-                                }
-
-                            </div>
-
-                        </div>
-                    </div>
-                    <div style="margin-top:80px; margin-bottom:80px">
-                        <nav>
-                            <ul id="navDiv0" class="pagination pg-red pagination-lg justify-content-center">
-                                <li class="page-item">
-                                    <a href="~/@previous?category=@category#blog" class="page-link waves-effect waves-effect" aria-label="Previous">
-                                        <span aria-hidden="true">«</span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                </li>
-                                @{
-                                    var postCount = Model.TotalPostCount < 1 ? 1 : Model.TotalPostCount;
-                                    var numberOfPages = (int)Math.Ceiling((Decimal)Model.LatestArticle.Count() / postCount);
-                                    foreach (var item in Enumerable.Range(1, numberOfPages))
-                                    {
-                                        <li class="page-item btnn0 @(Model.CurrentPage == item? "active" : "")   "><a href="~/@item?category=@category#blog" class="page-link waves-effect waves-effect">@item</a></li>
-                                    }
-                                }
-
-                                <li class="page-item btnn0">
-                                    <a href="~/@next?category=@category#blog" class="page-link waves-effect waves-effect" aria-label="Next">
-                                        <span aria-hidden="true">»</span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-
-                    <!-- Blog Section - Don't Miss -->
-
-                    <div class="blog_section" style="margin-bottom:80px">
-
-                        <div class="section_panel d-flex flex-row align-items-center justify-content-start">
-                            <div class="section_title">Don't Miss</div>
-
-
-                        </div>
-
-                        <div class="section_content">
-                            <div class="grid clearfix">
-
-
-                                @foreach (var item in Model.DontMiss)
-                                {
-
-
-                                    <!-- Small Card With Image -->
-                                    <div class="card card_default  card_small_with_image grid-item">
-                                        <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="@Html.DisplayFor(modelItem => item.Title)">
+                                    <div class="card card_default card_small_with_image grid-item">
+                                        <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
                                         <div class="card-body">
                                             <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
                                             <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
@@ -316,10 +289,52 @@
 
                                 }
 
-
                             </div>
+
                         </div>
                     </div>
+                    <div style="margin-top:80px; margin-bottom:80px">
+                        @if (Model.LatestArticle.Any())
+                        {
+                            <nav>
+                                <ul id="navDiv0" class="pagination pg-red pagination-lg justify-content-center">
+                                    <li class="page-item">
+                                        <a href="~/@previous?category=@category#blog" class="page-link waves-effect waves-effect" aria-label="Previous">
+                                            <span aria-hidden="true">«</span>
+                                            <span class="sr-only">Previous</span>
+                                        </a>
+                                    </li>
+                                    @{
+                                        var postCount = Model.TotalPostCount < 1 ? 1 : Model.TotalPostCount;
+                                        var numberOfPages = (int)Math.Ceiling((Decimal)Model.LatestArticle.Count() / postCount);
+                                        foreach (var item in Enumerable.Range(1, numberOfPages))
+                                        {
+                                            <li class="page-item btnn0 @(Model.CurrentPage == item? "active" : "")   "><a href="~/@item?category=@category#blog" class="page-link waves-effect waves-effect">@item</a></li>
+                                        }
+                                    }
+
+                                    <li class="page-item btnn0">
+                                        <a href="~/@next?category=@category#blog" class="page-link waves-effect waves-effect" aria-label="Next">
+                                            <span aria-hidden="true">»</span>
+                                            <span class="sr-only">Next</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                        }
+                        else
+                        {
+                            <div class="section_panel d-flex flex-row align-items-center">
+                                No post in yet in this category
+
+
+                            </div>
+                        }
+
+                    </div>
+
+                    <!-- Blog Section - Don't Miss -->
+
 
                 </div>
 
@@ -344,259 +359,6 @@
                                         <polyline fill="#bebebe" points="0,5.61 5.609,0 7,0 7,1.438 2.438,6 7,10.563 7,12 5.609,12 -0.002,6.39 " />
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 											</svg>
                                     </div>
                                     <ul id="custom_dots" class="custom_dots custom_dots_vid">
@@ -610,259 +372,6 @@
                                         <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 											</svg>
                                     </div>
                                 </div>
@@ -874,7 +383,19 @@
                             <div class="sidebar_slider_container">
                                 <div class="owl-carousel owl-theme sidebar_slider_vid">
 
+                                    @foreach (var item in Model.TopPosts)
+                                    {
 
+                                        <div style="max-width:95%;" class="card card_default card_small_with_image grid-item">
+                                            <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                                            <div class="card-body">
+                                                <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                                <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                            </div>
+                                        </div>
+
+
+                                    }
 
                                 </div>
                             </div>
