--- a/SelahSeries/Views/Admin/_AdminLayout.cshtml
+++ b/SelahSeries/Views/Admin/_AdminLayout.cshtml
@@ -6,14 +6,15 @@
     <title>@ViewBag.Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="newfolder2/admin/css/style.css">
     @if (IsSectionDefined("AddToHead"))
     {
         @RenderSection("AddToHead", required: false)
     }
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/newfolder2/admin/css/style.css">
+
 </head>
 <body>
     <div class="wrapper d-flex align-items-stretch">
@@ -25,19 +26,19 @@
                 </button>
             </div>
             <div class="p-4 pt-5">
-                <h1><a href="index.html" class="logo">Selah</a></h1>
+                <h1><a href="~/admin" class="logo">Selah</a></h1>
                 <ul class="list-unstyled components mb-5">
                     <li class="active">
-                        <a href="#">Notification</a>
+                        <a href="~/admin">Notification</a>
                     </li>
                     <li>
                         <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Blog Management</a>
                         <ul class="collapse list-unstyled" id="homeSubmenu">
                             <li>
-                                <a href="#">View posts</a>
+                                <a href="~/blogmgt">View posts</a>
                             </li>
                             <li>
-                                <a href="#"> Create new post</a>
+                                <a href="~/blogmgt/create"> Create new post</a>
                             </li>
 
                         </ul>
@@ -47,10 +48,10 @@
                         <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Book Management</a>
                         <ul class="collapse list-unstyled" id="pageSubmenu">
                             <li>
-                                <a href="#">Add new book</a>
+                                <a href="~/bookmgt/create">Add new book</a>
                             </li>
                             <li>
-                                <a href="#">View Books</a>
+                                <a href="~/bookmgt">View Books</a>
                             </li>
                         </ul>
                     </li>
@@ -74,13 +75,14 @@
             @RenderBody()
         </div>
     </div>
-    <script src="newfolder2/admin/js/jquery.min.js"></script>
-    <script src="newfolder2/admin/js/popper.js"></script>
-    <script src="newfolder2/admin/js/bootstrap.min.js"></script>
-    <script src="newfolder2/admin/js/main.js"></script>
+    <script src="~/newfolder2/admin/js/jquery.min.js"></script>
+    <script src="~/newfolder2/admin/js/popper.js"></script>
+    <script src="~/newfolder2/admin/js/bootstrap.min.js"></script>
+    <script src="~/newfolder2/admin/js/main.js"></script>
     @if (IsSectionDefined("AddToEnd"))
     {
         @RenderSection("AddToEnd", required: false)
     }
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
