--- a/SelahSeries/Views/BlogMgt/Create.cshtml
+++ b/SelahSeries/Views/BlogMgt/Create.cshtml
@@ -1,8 +1,10 @@
 ﻿@model SelahSeries.ViewModels.PostCreateViewModel
 
 @{
-    ViewData["Title"] = "Create";
-    ViewData["Add Navigation"] = "false";
+
+    ViewBag.Title = "Create Blog";
+
+    Layout = "~/views/admin/_AdminLayout.cshtml";
 }
 
     @section AddToHead {
@@ -62,8 +64,7 @@
     }
 
     <div style="color: #ffcc00; background-color:black;" class="jumbotron text-center">
-        <h1>Blog Content Management Page <br /> (Add a new Post)</h1>
-        <p> Add, Delete, Edit, Archive Blog Posts Here...</p>
+        <h3 style="color: #ffcc00; background-color:black;">Blog Content Management Page <br /> Add a new Post</h3>
     </div>
 
     <div class="row">
@@ -143,11 +144,5 @@
         </div>
            
         <div class="col-lg-1"></div>
-    </div>
-
-
-    <div style="color: #ffcc00; background-color:black; margin-bottom:0;" class=" text-center">
-        <h1>Selah Series</h1>
-        <p> &copy; 2020</p>
     </div>
 
