--- a/SelahSeries/Views/BookMgt/Create.cshtml
+++ b/SelahSeries/Views/BookMgt/Create.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Create";
     ViewData["Add Navigation"] = "false";
+    Layout = "~/views/admin/_AdminLayout.cshtml";
 }
 
 @section AddToHead {
@@ -59,8 +60,7 @@
 }
 
 <div style="color: #ffcc00; background-color:black;" class="jumbotron text-center">
-    <h1>Books Management Page <br /> (Add a new Book)</h1>
-    <p> Add, Delete and Edit Books Here...</p>
+    <h3 style="color: #ffcc00; background-color:black;">Books Management Page <br /> Add a new Book</h3>
 </div>
 <div class="row">
     <div class="col-lg-1"></div>
