--- a/SelahSeries/Views/BookMgt/Delete.cshtml
+++ b/SelahSeries/Views/BookMgt/Delete.cshtml
@@ -3,16 +3,9 @@
 @{
     ViewData["Title"] = "Delete";
     ViewData["Add Navigation"] = "false";
+    Layout = "~/views/admin/_AdminLayout.cshtml";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Delete</title>
-</head>
-<body>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
@@ -68,5 +61,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
-</body>
-</html>
+
