--- a/SelahSeries/Views/BookMgt/Edit.cshtml
+++ b/SelahSeries/Views/BookMgt/Edit.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
     ViewData["Add Navigation"] = "false";
+    Layout = "~/views/admin/_AdminLayout.cshtml";
 }
 
 
@@ -61,6 +62,9 @@
 
 }
 <hr />
+<div style="color: #ffcc00; background-color:black;" class="jumbotron text-center">
+    <h3 style="color: #ffcc00; background-color:black;">Books Management Page <br /> Edit Book</h3>
+</div>
 <div class="row">
     <div class="col-lg-1"></div>
     <div class="col-lg-10">
@@ -157,8 +161,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
-<div style="color: #ffcc00; background-color:black; margin-bottom:0;" class=" text-center">
-    <h1>Selah Series</h1>
-    <p> &copy; 2020</p>
-</div>
 
