--- a/SelahSeries/wwwroot/NewFolder2/Admin/css/style.css
+++ b/SelahSeries/wwwroot/NewFolder2/Admin/css/style.css
@@ -8241,9 +8241,16 @@ h1, h2, h3, h4, h5,
       border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
       #sidebar ul li a:hover {
         color: #fff; }
+    #sidebar ul li.active {
+        background: transparent;
+    }
+    #sidebar ul li.active::after {
+        content: none;
+    }
     #sidebar ul li.active > a {
-      background: transparent;
-      color: #fff; }
+        background: transparent;
+        color: #fff;
+    }
   @media (max-width: 991.98px) {
     #sidebar {
       margin-left: -250px; }
